--- a/Source/Views/MainWindow.xaml
+++ b/Source/Views/MainWindow.xaml
@@ -1,9 +1,8 @@
 ﻿<Window x:Class="WatchedFilmsTracker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WatchedFilmsTracker"
         mc:Ignorable="d"
         Title="MainWindow"
         MinHeight="225" MinWidth="1000" ScrollViewer.CanContentScroll="True">
@@ -21,95 +20,109 @@
                             <Button x:Name="buttonNewFile"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="NewFile">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="/Assets/Icons/newFile.png" Stretch="None" />
-                                    <TextBlock Text="New file" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                    <TextBlock Text="New file" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                             <Button x:Name="buttonOpenFile"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="OpenFileChooser">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="\Assets\Icons\openFile.png" Stretch="None" />
-                                    <TextBlock Text="Open file" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                    <TextBlock Text="Open file" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
-                            <Separator Width="5" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+                            <Separator Width="5" HorizontalAlignment="Center" VerticalAlignment="Center" />
                             <Button x:Name="buttonSave"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="Save">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="/Assets/Icons/save2.png" Stretch="None" />
-                                    <TextBlock Text="Save" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                    <TextBlock Text="Save" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                             <Button x:Name="buttonSaveAs"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="SaveAs">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="\Assets\Icons\saveas2.png" Stretch="None" />
-                                    <TextBlock Text="Save as" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                    <TextBlock Text="Save as" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                             <Button x:Name="buttonRevertChanges"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="RevertChanges">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="\Assets\Icons\revert.png" Stretch="None" />
-                                    <TextBlock Text="Revert changes" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                    <TextBlock Text="Revert changes" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
-                            <Separator Width="5" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+                            <Separator Width="5" HorizontalAlignment="Center" VerticalAlignment="Center" />
                             <Button x:Name="buttonNewFilmRecord"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="NewFilmRecord">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="\Assets\Icons\addrecord.png" Stretch="None" />
-                                    <TextBlock Text="New film record" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                    <TextBlock Text="New film record" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                             <Button x:Name="buttonDeleteFilmRecord"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="DeleteFilmRecord">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="\Assets\Icons\deleterecord.png" Stretch="None" />
-                                    <TextBlock Text="Delete film record" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                    <TextBlock Text="Delete film record" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                             <Button x:Name="buttonClearAll"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="ClearAll">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="\Assets\Icons\clear2.png" Stretch="None" />
-                                    <TextBlock Text="Clear all" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                    <TextBlock Text="Clear all" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
-                            <Separator Width="5" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+                            <Separator Width="5" HorizontalAlignment="Center" VerticalAlignment="Center" />
                             <Button x:Name="buttonAbout"  HorizontalAlignment="Left"  VerticalAlignment="Top" Click="AboutButton">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="\Assets\Icons\about2.png" Stretch="None" />
-                                    <TextBlock Text="About" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                    <TextBlock Text="About" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                         </StackPanel>
-
                     </GroupBox>
 
                     <!--Watched films table border-->
                     <GroupBox x:Name="groupBoxFilmList" MaxWidth="{Binding Width, ElementName=groupBoxQuickActions}">
                         <GroupBox.Header>List of watched films data</GroupBox.Header>
-                        <Grid x:Name="grid" >
-                            <DataGrid x:Name="filmsGrid" CellEditEnding="FilmGrid_CellEditEnding" AutoGenerateColumns="False" CanUserAddRows="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ColumnWidth="Auto" Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" CanUserDeleteRows="False"/>
+                        <Grid x:Name="grid">
+                            <DataGrid x:Name="filmsGrid" AutoGenerateColumns="False" CanUserAddRows="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ColumnWidth="Auto" Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" CanUserDeleteRows="False" />
                         </Grid>
                         <!--<Label Content="Table to see the films" HorizontalAlignment="Left" Background="#FFCDD5EC"></Label>-->
                     </GroupBox>
-
                 </StackPanel>
 
                 <!--Statistics and settings-->
-                <StackPanel Orientation="Vertical">
+                <StackPanel Orientation="Vertical" MinWidth="250">
 
                     <!--Statistics border-->
                     <GroupBox>
-                        <GroupBox.Header>Statistics</GroupBox.Header>
+                        <GroupBox.Header>Total statistics</GroupBox.Header>
                         <StackPanel Orientation="Vertical">
                             <StackPanel Orientation="Horizontal">
-                                <Label>Number  of films watched:</Label>
+                                <Label>Total films:</Label>
                                 <Label x:Name="filmsTotalLabel">0</Label>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label>Average rating per film:</Label>
                                 <Label x:Name="averageRatingLabel">No data</Label>
                             </StackPanel>
-                            <StackPanel Orientation="Horizontal">
-                                <Label>On average you watch:</Label>
-                                <Label x:Name="averageFilmPerDayLabel">0</Label>
-                                <Label>films per week.</Label>
+                        </StackPanel>
+                    </GroupBox>
+
+                    <GroupBox>
+                        <GroupBox.Header>Decadal statistics</GroupBox.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <StackPanel Orientation="Vertical">
+                              
+                                    <StackPanel x:Name="MainPanelDecadal" Orientation="Horizontal">
+                                        <StackPanel x:Name="decadePanel" Orientation="Vertical"></StackPanel>
+                                        <StackPanel x:Name="totalFilmPanel" Orientation="Vertical"></StackPanel>
+                                        <StackPanel x:Name="averageRatingPanel" Orientation="Vertical"></StackPanel>
+                                    </StackPanel>
                             </StackPanel>
+                        </StackPanel>
+                    </GroupBox>
+
+                    <GroupBox>
+                        <GroupBox.Header>Yearly statistics</GroupBox.Header>
+                        <StackPanel x:Name="YearlyStatisticsPanel" Orientation="Vertical">
+                            <Label Content="***Coming soon***" />
                         </StackPanel>
                     </GroupBox>
 
@@ -117,8 +130,12 @@
                     <GroupBox>
                         <GroupBox.Header>Settings</GroupBox.Header>
                         <StackPanel Orientation="Vertical">
-                            <CheckBox x:Name="defaultDateBox" Content="Default date is today" Click="CheckBoxDefaultDate"/>
-                            <CheckBox x:Name="autosaveBox" Content="Autosave changes on close" Click="CheckBoxAutoSave"/>
+                            <CheckBox x:Name="defaultDateBox" Content="Default date is today" Click="CheckBoxDefaultDate" />
+                            <CheckBox x:Name="autosaveBox" Content="Autosave changes on close" Click="CheckBoxAutoSave" />
+                            <Grid>
+                                <Label Content="Columns order and width"></Label>
+                                <Button Content="Reset to default" VerticalAlignment="Center" HorizontalAlignment="Right" Click="ResetColumnsWidthAndOrder" />
+                            </Grid>
                         </StackPanel>
                     </GroupBox>
                 </StackPanel>
@@ -128,8 +145,7 @@
         <!--Version bottom panel-->
         <Grid Background="#FFAFAFAF" Margin="0,160,0,0" VerticalAlignment="Bottom">
             <Label x:Name="LabelVersion" Content="Version 0.001" HorizontalAlignment="Left" VerticalAlignment="Top"></Label>
-            <Label x:Name="LabelAuthor" Content="© 2024 Oskar Jargilo" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <Label x:Name="LabelAuthor" Content="© 2024 Oskar Jargilo" HorizontalAlignment="Right" VerticalAlignment="Center" />
         </Grid>
-
     </Grid>
 </Window>
