--- a/Source/Views/MainWindow.xaml
+++ b/Source/Views/MainWindow.xaml
@@ -5,147 +5,145 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="MainWindow"
-        MinHeight="225" MinWidth="1000" ScrollViewer.CanContentScroll="True">
+        MinHeight="225" MinWidth="1000" ScrollViewer.CanContentScroll="True" Height="396">
     <Grid>
-        <StackPanel Orientation="Vertical">
-            <StackPanel x:Name="stackPanel1" Orientation="Horizontal">
 
-                <!-- Left Panel-->
-                <StackPanel x:Name="leftPanel" Orientation="Vertical" MaxWidth="{Binding ActualWidth, ElementName=groupBoxQuickActions, Mode=OneWay}">
+        <!-- Upper panel for all data-->
+        <DockPanel DockPanel.Dock="Top" LastChildFill="True">
+
+            <!--Right Panel, Statistics and settings-->
+            <StackPanel Orientation="Vertical" MinWidth="250" DockPanel.Dock="Right">
+
+                <!--Settings border-->
+                <GroupBox>
+                    <GroupBox.Header>Settings</GroupBox.Header>
+                    <StackPanel Orientation="Vertical">
+                        <CheckBox x:Name="defaultDateBox" Content="Default date is today" Click="CheckBoxDefaultDate" />
+                        <CheckBox x:Name="autosaveBox" Content="Autosave changes on close" Click="CheckBoxAutoSave" />
+                        <Grid>
+                            <Label Content="Columns order and width"></Label>
+                            <Button Content="Reset to default" VerticalAlignment="Center" HorizontalAlignment="Right" Click="ResetColumnsWidthAndOrder" />
+                        </Grid>
+                    </StackPanel>
+                </GroupBox>
+
+                <!--Total Statistics border-->
+                <GroupBox>
+                    <GroupBox.Header>Total statistics</GroupBox.Header>
+                    <StackPanel Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal">
+                            <Label>Total films:</Label>
+                            <Label x:Name="filmsTotalLabel">0</Label>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label>Average rating per film:</Label>
+                            <Label x:Name="averageRatingLabel">No data</Label>
+                        </StackPanel>
+                    </StackPanel>
+                </GroupBox>
+
+                <GroupBox>
+                    <GroupBox.Header>Decadal statistics</GroupBox.Header>
+
+                    <Grid>
+                        <DataGrid x:Name="decadalGrid" CanUserResizeColumns="False" CanUserResizeRows="False" AutoGenerateColumns="False" />
+                    </Grid>
+                </GroupBox>
+
+                <GroupBox>
+                    <GroupBox.Header>Yearly statistics</GroupBox.Header>
+                    <Grid>
+                        <DataGrid x:Name="yearlyGrid" CanUserResizeColumns="False" CanUserResizeRows="False" AutoGenerateColumns="False" />
+                    </Grid>
+                </GroupBox>
+            </StackPanel>
+
+            <!-- Left Panel, buttons and films grid-->
+            <DockPanel LastChildFill="True" DockPanel.Dock="Left">
+                <StackPanel x:Name="leftPanel"  DockPanel.Dock="Top" Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top">
 
                     <!--Quick actions border-->
-                    <GroupBox x:Name="groupBoxQuickActions"  HorizontalAlignment="Left" VerticalAlignment="Top">
+                    <GroupBox x:Name="groupBoxQuickActions"  HorizontalAlignment="Left">
                         <GroupBox.Header>Quick actions</GroupBox.Header>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
                             <Button x:Name="buttonNewFile"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="NewFile">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="/Assets/Icons/newFile.png" Stretch="None" />
+                                    <Image Source="/Assets/Icons/newFile.png" Stretch="None"  RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
                                     <TextBlock Text="New file" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                             <Button x:Name="buttonOpenFile"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="OpenFileChooser">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="\Assets\Icons\openFile.png" Stretch="None" />
+                                    <Image Source="\Assets\Icons\openFile.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
                                     <TextBlock Text="Open file" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
-                            <Separator Width="5" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                            <Button x:Name="buttonSave"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="Save">
+                            <Separator Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
+                            <Button x:Name="buttonSave"  VerticalAlignment="Top"  Click="Save">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="/Assets/Icons/save2.png" Stretch="None" />
+                                    <Image Source="/Assets/Icons/save2.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
                                     <TextBlock Text="Save" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                             <Button x:Name="buttonSaveAs"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="SaveAs">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="\Assets\Icons\saveas2.png" Stretch="None" />
+                                    <Image Source="\Assets\Icons\saveas2.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
                                     <TextBlock Text="Save as" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                             <Button x:Name="buttonRevertChanges"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="RevertChanges">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="\Assets\Icons\revert.png" Stretch="None" />
+                                    <Image Source="\Assets\Icons\revert.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
                                     <TextBlock Text="Revert changes" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
-                            <Separator Width="5" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            <Separator Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
                             <Button x:Name="buttonNewFilmRecord"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="NewFilmRecord">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="\Assets\Icons\addrecord.png" Stretch="None" />
+                                    <Image Source="\Assets\Icons\addrecord.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
                                     <TextBlock Text="New film record" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
-                            <Button x:Name="buttonDeleteFilmRecord"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="DeleteFilmRecord">
+                            <Button x:Name="buttonDeleteFilmRecord"  HorizontalAlignment="Left" VerticalAlignment="Top" UseLayoutRounding="False" Click="DeleteFilmRecord">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="\Assets\Icons\deleterecord.png" Stretch="None" />
+                                    <Image Source="\Assets\Icons\deleterecord.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
                                     <TextBlock Text="Delete film record" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                             <Button x:Name="buttonClearAll"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="ClearAll">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="\Assets\Icons\clear2.png" Stretch="None" />
+                                    <Image Source="\Assets\Icons\clear2.png" Stretch="None"  RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
                                     <TextBlock Text="Clear all" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
-                            <Separator Width="5" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            <Separator Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
                             <Button x:Name="buttonAbout"  HorizontalAlignment="Left"  VerticalAlignment="Top" Click="AboutButton">
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="\Assets\Icons\about2.png" Stretch="None" />
+                                    <Image Source="\Assets\Icons\about2.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
                                     <TextBlock Text="About" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                         </StackPanel>
                     </GroupBox>
-
-                    <!--Watched films table border-->
-                    <GroupBox x:Name="groupBoxFilmList" MaxWidth="{Binding Width, ElementName=groupBoxQuickActions}">
-                        <GroupBox.Header>List of watched films data</GroupBox.Header>
-                        <Grid x:Name="grid">
-                            <DataGrid x:Name="filmsGrid" AutoGenerateColumns="False" CanUserAddRows="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ColumnWidth="Auto" Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" CanUserDeleteRows="False" />
-                        </Grid>
-                        <!--<Label Content="Table to see the films" HorizontalAlignment="Left" Background="#FFCDD5EC"></Label>-->
-                    </GroupBox>
                 </StackPanel>
 
-                <!--Statistics and settings-->
-                <StackPanel Orientation="Vertical" MinWidth="250">
-
-                    <!--Statistics border-->
-                    <GroupBox>
-                        <GroupBox.Header>Total statistics</GroupBox.Header>
-                        <StackPanel Orientation="Vertical">
-                            <StackPanel Orientation="Horizontal">
-                                <Label>Total films:</Label>
-                                <Label x:Name="filmsTotalLabel">0</Label>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal">
-                                <Label>Average rating per film:</Label>
-                                <Label x:Name="averageRatingLabel">No data</Label>
-                            </StackPanel>
-                        </StackPanel>
-                    </GroupBox>
-
-                    <GroupBox>
-                        <GroupBox.Header>Decadal statistics</GroupBox.Header>
-                        <StackPanel Orientation="Horizontal">
-                            <StackPanel Orientation="Vertical">
-                              
-                                    <StackPanel x:Name="MainPanelDecadal" Orientation="Horizontal">
-                                        <StackPanel x:Name="decadePanel" Orientation="Vertical"></StackPanel>
-                                        <StackPanel x:Name="totalFilmPanel" Orientation="Vertical"></StackPanel>
-                                        <StackPanel x:Name="averageRatingPanel" Orientation="Vertical"></StackPanel>
-                                    </StackPanel>
-                            </StackPanel>
-                        </StackPanel>
-                    </GroupBox>
-
-                    <GroupBox>
-                        <GroupBox.Header>Yearly statistics</GroupBox.Header>
-                        <StackPanel x:Name="YearlyStatisticsPanel" Orientation="Vertical">
-                            <Label Content="***Coming soon***" />
-                        </StackPanel>
-                    </GroupBox>
-
-                    <!--Settings border-->
-                    <GroupBox>
-                        <GroupBox.Header>Settings</GroupBox.Header>
-                        <StackPanel Orientation="Vertical">
-                            <CheckBox x:Name="defaultDateBox" Content="Default date is today" Click="CheckBoxDefaultDate" />
-                            <CheckBox x:Name="autosaveBox" Content="Autosave changes on close" Click="CheckBoxAutoSave" />
-                            <Grid>
-                                <Label Content="Columns order and width"></Label>
-                                <Button Content="Reset to default" VerticalAlignment="Center" HorizontalAlignment="Right" Click="ResetColumnsWidthAndOrder" />
-                            </Grid>
-                        </StackPanel>
-                    </GroupBox>
-                </StackPanel>
-            </StackPanel>
-        </StackPanel>
+                <!--Watched films table border-->
+                <GroupBox x:Name="groupBoxFilmList" DockPanel.Dock="Left" MaxWidth="{Binding Width, ElementName=groupBoxQuickActions}"  Margin="0,0,0,30">
+                    <GroupBox.Header>List of watched films data</GroupBox.Header>
+                    <Grid x:Name="grid">
+                        <DataGrid x:Name="filmsGrid" AutoGenerateColumns="False" CanUserAddRows="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ColumnWidth="Auto" CanUserDeleteRows="False"
+ScrollViewer.CanContentScroll="True"
+ScrollViewer.VerticalScrollBarVisibility="Auto"
+ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" />
+                    </Grid>
+                </GroupBox>
+            </DockPanel>
+        </DockPanel>
 
         <!--Version bottom panel-->
-        <Grid Background="#FFAFAFAF" Margin="0,160,0,0" VerticalAlignment="Bottom">
-            <Label x:Name="LabelVersion" Content="Version 0.001" HorizontalAlignment="Left" VerticalAlignment="Top"></Label>
-            <Label x:Name="LabelAuthor" Content="© 2024 Oskar Jargilo" HorizontalAlignment="Right" VerticalAlignment="Center" />
-        </Grid>
+        <DockPanel Background="#FFAFAFAF" DockPanel.Dock="Bottom" VerticalAlignment="Bottom">
+            <Label x:Name="LabelVersion" Content="Version 0.001" DockPanel.Dock="Left" HorizontalAlignment="Left" VerticalAlignment="Top"></Label>
+            <Label x:Name="LabelAuthor" DockPanel.Dock="Right" Content="© 2024 Oskar Jargilo" HorizontalAlignment="Right" VerticalAlignment="Center" />
+        </DockPanel>
     </Grid>
 </Window>
