--- a/Source/Views/MainWindow.xaml
+++ b/Source/Views/MainWindow.xaml
@@ -17,23 +17,32 @@
                 <!--Settings border-->
                 <GroupBox>
                     <GroupBox.Header>Settings</GroupBox.Header>
+
                     <StackPanel Orientation="Vertical">
-                        <CheckBox x:Name="defaultDateBox" Content="Default date is today" Click="CheckBoxDefaultDate" />
-                        <CheckBox x:Name="autosaveBox" Content="Autosave changes on close" Click="CheckBoxAutoSave" />
-                        <Grid>
+                        <GroupBox>
+                            <GroupBox.Header>General</GroupBox.Header>
+                            <StackPanel Orientation="Vertical">
+                                <CheckBox x:Name="defaultDateBox" Content="Default date is today" Click="CheckBoxDefaultDate" />
+                                <CheckBox x:Name="autosaveBox" Content="Autosave changes on close" Click="CheckBoxAutoSave" />
+                            </StackPanel>
+                        </GroupBox>
+                        <GroupBox>
+                            <GroupBox.Header>On startup</GroupBox.Header>
+                            <StackPanel Orientation="Vertical">
+                                <CheckBox x:Name="scrollLastPositionBox" Content="Scroll to last film position" Click="CheckBoxLastFilmPosition" />
+                                <CheckBox x:Name="updateStartUpBox" Content="Check for updates" Click="CheckBoxUpdateStartup" />
+                            </StackPanel>
+                        </GroupBox>
+                        <Grid Margin="0,0,0,5">
                             <TextBlock Text="Columns order and width" HorizontalAlignment="Left" VerticalAlignment="Center" />
                             <Button Content="Reset to default" VerticalAlignment="Center" HorizontalAlignment="Right" Click="ResetColumnsWidthAndOrder" />
                         </Grid>
-                        <Separator />
-                        <CheckBox x:Name="scrollLastPositionBox" Content="Scroll to last film position" Click="CheckBoxLastFilmPosition" />
-                        <CheckBox x:Name="updateStartUpBox" Content="Check update on startup" Click="CheckBoxUpdateStartup" />
-                        <Separator />
                         <Grid>
                             <StackPanel Orientation="Horizontal">
                                 <Image x:Name="ImageNewVersionSettings" Source="\Assets\Icons\newVersion.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" Margin="0,0,5,0" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.RowSpan="1" Grid.ColumnSpan="1" Visibility="Collapsed" />
                                 <TextBlock x:Name="SettingsUpdateBlock" Text="Program update" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" />
                             </StackPanel>
-                            <Button x:Name="CheckUpdatesButton" Content="Check for update" VerticalAlignment="Center" HorizontalAlignment="Right" Click="ManualCheckForUpdate" Grid.Column="2" Grid.ColumnSpan="1" Grid.RowSpan="1" />
+                            <Button x:Name="CheckUpdatesButton" Content="Check for updates" VerticalAlignment="Center" HorizontalAlignment="Right" Click="ManualCheckForUpdate" Grid.Column="2" Grid.ColumnSpan="1" Grid.RowSpan="1" />
                         </Grid>
                     </StackPanel>
                 </GroupBox>
@@ -76,7 +85,7 @@
                     <!--Quick actions border-->
                     <GroupBox x:Name="groupBoxQuickActions"  HorizontalAlignment="Left">
                         <GroupBox.Header>Quick actions</GroupBox.Header>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
                             <Button x:Name="buttonNewFile"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="NewFile">
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="/Assets/Icons/newFile.png" Stretch="None"  RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
@@ -87,6 +96,19 @@
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="\Assets\Icons\openFile.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
                                     <TextBlock Text="Open file" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                                </StackPanel>
+                            </Button>
+                            <Separator Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
+                            <Button x:Name="buttonOpenLocally"  VerticalAlignment="Top"  Click="LoadLocally">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Source="/Assets/Icons/loadLocally.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
+                                    <TextBlock Text="Open locally" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                                </StackPanel>
+                            </Button>
+                            <Button x:Name="buttonSaveLocally"  VerticalAlignment="Top"  Click="SaveLocally">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Source="/Assets/Icons/saveLocally.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
+                                    <TextBlock Text="Save locally" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
                             <Separator Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
@@ -141,7 +163,6 @@
                                     <TextBlock Text="About" HorizontalAlignment="Left" VerticalAlignment="Center" />
                                 </StackPanel>
                             </Button>
-                            <RadioButton Content="RadioButton" />
                         </StackPanel>
                     </GroupBox>
                 </StackPanel>
